@@ -2,6 +2,7 @@
 	* actors.cc: fixed division by zero
 	* shapes/Makefile.am: removed outdated OMIT_DEPENDENCIES
 	* mapedit/compile.cc: std::string
+	* mapedit/execbox.cc: #include <iostream>
 
 2002-10-31  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* shapes/font.cc: fixed hang in french BG
